<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dyseggxia</string>
    <string name="ok">OK</string>
	<string name="level0">Inicial</string>
	<string name="level1">Fácil</string>
	<string name="level2">Medio</string>
	<string name="level3">Difícil</string>
	<string name="level4">Experto</string>
	<string name="back">Atrás</string>
	<string name="continuar">Continuar</string>
	<string name="direction">dirección</string>
	<string name="derivation">Derivación</string>
	<string name="insertion">Inserción</string>
	<string name="omission">Omisión</string>
	<string name="substitution">Sustitución</string>
	<string name="sentenceseparation">Separación</string>
	
	<string name="menulogo">logotipo</string>
	<string name="play">Jugar</string>
	<string name="shop">Tienda</string>
	<string name="language">idioma</string>
	<string name="spanish">Español</string>
	<string name="scorebucket">Contador de puntos</string>
	<string name="custompingu">Pingüino personalizado</string>
	<string name="fish">pez</string>
	<string name="score">puntuación</string>
	<string name="cube">cubo</string>
	<string name="answersbox">cajón de respuestas</string>
	<string name="pinguhand">mano de pingüino</string>
	
	<string name="insertion_desc">Falta una letra!</string>
	<string name="omission_desc">Sobra una letra!</string>
	<string name="substitution_desc">Cambia una letra!</string>
	<string name="derivation_desc">Escoge!</string>
	<string name="separation_desc">Corta en palabras!</string>
	
	<string name="solution">solución</string>
	
	<string name="word_cube_background">cubo</string>
	
	<string name="home_parents">Padres</string>
	<string name="home_users">Usuarios</string>
	<string name="home_user_placeholder">nombreeeee</string>
	<string name="home_info">Información</string>
	
	<string name="users_background">Fondo</string>
	<string name="users_create">Crear usuario</string>
	<string name="users_edit">Editar</string>
	<string name="users_done">Hecho</string>
	
	<string name="users_create_name_hint">Nombre</string>
	<string name="users_create_cancel">Cancelar</string>
	<string name="users_create_save">Guardar</string>
</resources>