<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<ImageView 
	    android:id="@+id/usersSimpleBackground"
	    android:contentDescription="@string/users_background"
	    style="@style/SimpleBackground" />
	
	<ImageView 
	    android:id="@+id/usersCreateBackground"
	    android:contentDescription="@string/users_background"
	    style="@style/MenuYellowBackground" />
	
	<ImageView
        android:id="@+id/usersCreateLogo"
        style="@style/MainLogo"
        android:contentDescription="@string/menulogo"
        android:layout_alignTop="@id/usersCreateBackground"
         />
	
	<EditText 
	    android:id="@+id/usersCreateNameField"
	    style="@style/UsersCreateNameField" />
	
	<Button 
        android:id="@+id/usersCreateCancel"
        android:contentDescription="@string/users_create_cancel"
        style="@style/CreateUserRedSmallButton" />
	
	<Button 
        android:id="@+id/usersCreateSave"
        android:contentDescription="@string/users_create_save"
        style="@style/CreateUserGreenButton" />
	
</RelativeLayout>
