<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/playLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopolar"
    android:padding="15dp" >
    
    <Button
        android:id="@+id/playBackButton"
        style="@style/DyseggxiaPlayBackButton" />
    
    <Button
        android:id="@+id/playChangeLevelButton"
        style="@style/DyseggxiaChangeLevelButton"
        android:layout_centerInParent="true" />
    
    <Button 
        android:id="@+id/playStartButton"
        android:contentDescription="@string/play"
        style="@style/DyseggxiaPlayButton"
        android:layout_alignLeft="@id/playChangeLevelButton"
        android:layout_above="@id/playChangeLevelButton"/>
    
    <Button 
        android:id="@+id/playShopButton"
        android:contentDescription="@string/shop"
        style="@style/DyseggxiaShopButton"
        android:layout_alignLeft="@id/playChangeLevelButton"
        android:layout_below="@id/playChangeLevelButton"/>
    
    <ImageView 
        android:id="@+id/playPenguinButton"
        android:contentDescription="@string/custompingu"
        style="@style/DyseggxiaPlayPinguView" />
    
    <ImageView 
        android:id="@+id/fishbucket"
        android:contentDescription="@string/scorebucket"
        style="@style/PlayFishBucket" />
    
    <TextView 
        android:id="@+id/playScoreLabel"
        style="@style/PlayScoreLabel" />

</RelativeLayout>