<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mainbackground"
    android:onClick="onClick"
    android:orientation="vertical" >

    <ImageView 
        android:id="@+id/menulogo"
        style="@style/MainLogo"
        android:contentDescription="@string/menulogo" />
    
    <Button 
        android:id="@+id/menuplay"
        android:contentDescription="@string/play"
        style="@style/DyseggxiaMainPlayButton"
        android:layout_below="@id/menulogo"
        android:layout_centerHorizontal="true" />
    
    <Button 
        android:id="@+id/menulanguage"
        android:contentDescription="@string/language"
        style="@style/DyseggxiaChangeLanguageButton"
        android:layout_alignParentRight="true" />
    
    <ImageView 
        android:src="@drawable/menupingu"
        android:contentDescription="@string/menulogo"
        style="@style/MainPingu" />

</RelativeLayout>