<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	    android:background="@drawable/howtobackground"
	    android:layout_margin="60dp"
	    android:padding="20dp"
    	android:id="@+id/substitutionhowto" >
    
    <ImageView 
        android:contentDescription="@string/cube"
        style="@style/HowToCube1" />
    
    <ImageView 
        android:id="@+id/substitutionhowtomiddlecube"
        android:contentDescription="@string/cube"
        style="@style/HowToCube3"
        android:layout_centerHorizontal="true" />
    
    <ImageView 
        android:contentDescription="@string/cube"
        style="@style/HowToCube2"
        android:layout_alignParentRight="true" />
    
    <RelativeLayout
        android:contentDescription="@string/answersbox"
        style="@style/HowToAnswersBox"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/substitutionhowtomiddlecube">
        
        <ImageView 
            android:contentDescription="@string/cube"
            style="@style/HowToCube3"
            android:layout_centerVertical="true" />
        
        <ImageView 
            android:contentDescription="@string/cube"
            style="@style/HowToCube4"
            android:layout_centerVertical="true" 
            android:layout_centerHorizontal="true" />
        
        <ImageView 
            android:contentDescription="@string/cube"
            style="@style/HowToCube5"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    
    <ImageView 
        android:contentDescription="@string/pinguhand"
        style="@style/HowToHand"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>